# zkalc

./: .gitignore  AUTHORS  AUTHORS.js  CITATION.bib  LICENSE  README.md  TODO.md  index.js  main.html
.github/: dependabot.yml
backend/: .gitignore  Makefile  TODO  makefile
backend/arkworks/: Cargo.toml
backend/arkworks/benches/: bench_arkworks.rs  msm.rs
backend/blstrs/: Cargo.toml  foo.json
backend/blstrs/benches/: bench_blstrs.rs  msm.rs
backend/curve25519-dalek/: Cargo.toml
backend/curve25519-dalek/benches/: bench_dalek.rs  msm.rs
backend/ffiasm/: README.md  package.json
backend/ffiasm/lib/: .gitignore
backend/ffiasm/scripts/: bench.js
backend/ffiasm/src/: bench.cpp
backend/ffjavascript/: bench.js  package.json
backend/gnark/: zkalc.sh
backend/halo2_curves/benches/: bench_halo2_curves.rs
backend/icicle/: .gitignore  Cargo.toml  install.sh
backend/icicle/benches/: bench_icicle_cpu.rs  bench_icicle_cuda.rs
backend/icicle/src/: lib.rs
backend/iden3/: arithmetics.js  curves.js
backend/pairing_ce/: Cargo.toml
backend/pairing_ce/benches/: bench_pairing_ce.rs
backend/pasta_curves/: Cargo.toml
backend/pasta_curves/benches/: bench_pasta_curves.rs
backend/rapidsnark/: README.md
backend/rapidsnark/include/: nanobench.h
backend/rapidsnark/scripts/: bench.js
backend/rapidsnark/src/: bench.cpp
backend/zkcrypto/: Cargo.toml
backend/zkcrypto/benches/: bench_zkcrypto.rs
fronted/: styles.css
frontend/: .eslintrc.json  coefficients.json  foo.py  next.config.js  operations.js  package-lock.json  package.json  result.json  tailwind.config.js
frontend/app/: antdRegistry.js  layout.js  page.js
frontend/app/about/: about.mdx  page.js
frontend/app/charts/: page.js
frontend/app/methodology/: methodology.mdx  page.js
frontend/app/sigma/: page.js
frontend/components/: footer.js  github-file.js  header.js  layout.js  plot.js  recipe.js
frontend/data/: curves.json  defaults.json  estimates.json  libraries.json  machines.json  results_arkworks.json  results_arkworks_macbookpro2021.json  results_arkworks_t450.json  results_blstrs_macbookpro2021.json  results_blstrs_t450.json
frontend/data/BW6_761/arkworks/: aws_m5.2xlarge.json  aws_m6g.8xlarge.json  aws_m6i.8xlarge.json  aws_m7a.8xlarge.json  aws_m7g.8xlarge.json  aws_m7i.8xlarge.json  aws_p4d.24xlarge.json
frontend/data/CP6_782/arkworks/: aws_m5.2xlarge.json  aws_m6g.8xlarge.json  aws_m6i.8xlarge.json  aws_m7a.8xlarge.json  aws_m7g.8xlarge.json  aws_m7i.8xlarge.json  aws_p4d.24xlarge.json
frontend/data/MNT4_298/arkworks/: aws_m5.2xlarge.json  aws_m6g.8xlarge.json  aws_m6i.8xlarge.json  aws_m7a.8xlarge.json  aws_m7g.8xlarge.json  aws_m7i.8xlarge.json  aws_p4d.24xlarge.json
frontend/data/MNT6_298/arkworks/: aws_m5.2xlarge.json  aws_m6g.8xlarge.json  aws_m6i.8xlarge.json  aws_m7a.8xlarge.json  aws_m7g.8xlarge.json  aws_m7i.8xlarge.json  aws_p4d.24xlarge.json
frontend/data/bls12-377/arkworks/: aws_c5.9xlarge.json  aws_m5.2xlarge.json  m1pro.json
frontend/data/bls12-377/gnark/: aws_c5.9xlarge.json
frontend/data/bls12-381/arkworks/: aws_a1.2xlarge.json  aws_c5.9xlarge.json  aws_c5_9xlarge.json  aws_m5.2xlarge.json  t450.json
frontend/data/bls12-381/blstrs/: aws_a1.2xlarge.json  aws_c5.9xlarge.json  aws_c5_9xlarge.json  aws_m5.2xlarge.json  m1pro.json  thinkpad_t450.json
frontend/data/bls12-381/gnark/: aws_c5.9xlarge.json
frontend/data/bls12-381/zkcrypto/: aws_a1.2xlarge.json  aws_c5.9xlarge.json  aws_m5.2xlarge.json
frontend/data/bls12_377/arkworks/: aws_m5.2xlarge.json  aws_m6g.8xlarge-control.json  aws_m6g.8xlarge.json  aws_m6i.8xlarge-control.json  aws_m6i.8xlarge.json  aws_m7a.8xlarge.json  aws_m7g.8xlarge.json  aws_m7i.8xlarge.json  aws_p4d.24xlarge.json
frontend/data/bls12_377/gnark_crypto/: aws_m5.2xlarge.json  aws_m5.large.json  (+2 more)
frontend/lib/: cookbook.js  cookbook.test.js  estimates.js  formula.js  samples.js  selections.js  sigma.js  sigma.test.js  time.js  zkp.js
frontend/pages/: _app.js  about.mdx  add.mdx  charts.js  graphs.js  help.mdx  index.js  methodology.mdx  sketch.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  results_arkworks.json  results_arkworks_thinkpad.json  results_blstrs.json  results_blstrs_thinkpad.json
frontend/styles/: emgithub.css  globals.css
perf/: Makefile  README.md  common.py  fit.py  parse_go_benches.py
perf/arkworks/: estimates.json
perf/bench_parser/: parse_go_benches.py  parse_rust_benches.py
perf/benchmark_parser/: __main__.py  common.py  criterion.py  golang.py  tinybench.py
perf/blstrs/: estimates.json
perf/data/aws_a1.2xlarge/: ark-curves.json  arkworks.json  blstrs.json  curve25519-dalek.json  pasta_curves.json  zkcrypto.json
perf/data/aws_c5.9xlarge/: ark-curves.json  arkworks.json  blstrs.json  curve25519-dalek.json  gnark-bls12-377.txt  gnark-bls12-381.txt  gnark-bn254.txt  gnark-secp256k1.txt  pasta_curves.json  zkcrypto.json
perf/data/aws_c5_9xlarge/: ark-curves.json  arkworks.json  blstrs.json  curve25519-dalek.json  pasta_curves.json  zkcrypto.json
perf/data/aws_m5.2xlarge/: ark-curves.json  arkworks.json  blstrs.json  curve25519-dalek.json  pasta_curves.json  zkcrypto.json
perf/data/c5.9xlarge/: arkworks.json  blstrs.json
perf/data/m1pro/: arkworks.json
perf/data/m5.2xlarge/: arkworks.json
perf/data/t450/: curve25519-dalek.json  pasta_curves.json  zkcrypto.json
zkalc_bench/: Cargo.toml  fit.py
zkalc_bench/benches/: perf_zkalc_msm.rs
zkalc_bench/src/: main.rs
(+190 files in other folders)
