[package]
name = "bls_bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "perf_zkalc_msm"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blstrs = "0.6.1"
criterion = { version = "0.3.5", features = ["html_reports"] }
group = "0.12.0"
hashbrown = "0.12.3"
rand = "0.8.5"
