[package]
name = "blstrs-benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "George Kadianakis <desnacked@riseup.net>",
    "Michele Orrù <michele.orru@berkeley.edu>",
]

[[bench]]
name = "bench_blstrs"
harness = false

[dependencies]
blstrs = "0.7.1"
ff = "0.13"
group = { version = "0.13", features = ["tests"] }
pairing_lib = { version = "0.23", package = "pairing" }
criterion = { version = "0.3.5" }
rand = "0.8.5"
