[package]
name = "pasta_curves-benchmarks"
version = "0.1.0"
edition = "2021"
authors = [
    "Jack Grigg <thestr4d@gmail.com>",
]

[[bench]]
name = "bench_pasta_curves"
harness = false

[dependencies]
group = "0.13"
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "263356784042d7d4c1c17d357c94c1acaeb75ab5" }
pasta_curves = "0.5.1"
rand = "0.8"

[dev-dependencies]
criterion = "0.4"
