[package]
name = "zkcrypto-benchmarks"
version = "0.1.0"
edition = "2021"
authors = [
    "Jack Grigg <thestr4d@gmail.com>",
]


[[bench]]
name = "bench_zkcrypto"
harness = false

[dependencies]
group = "0.13"
pairing = "0.23"
bls12_381 = "0.8"
jubjub = "0.10"
rand = "0.8"

[dev-dependencies]
criterion = "0.4"
